﻿shmuel 09.03.2015 00:15:32 +0200 - build 4295

1. M#2965: При вставке вертикального блока усекаются последние символы в каждой строке.

drkns 08.03.2015 19:08:46 +0200 - build 4294

1. Рефакторинг.

drkns 08.03.2015 10:38:08 +0200 - build 4293

1. 0002963: Падение Фара при открытии файла в неверной кодировке

2. Пара "уточнений".

drkns 08.03.2015 03:59:24 +0200 - build 4292

1. В GCC некорректно (точнее, слишком корректно) работали fsf.sprintf/fsf.snprintf.

2. CoUninitialize вызывалась раньше чем нужно.

drkns 05.03.2015 23:52:10 +0200 - build 4291

1. Рефакторинг.

2. В одном из предыдущих билдов отвалился вызов CoInitializeEx.

zg 05.03.2015 12:02:34 +0200 - build 4290

1. всегда грузим плагины через LoadLibrary*, чтобы увеличить счётчик ссылок на длл.

zg 05.03.2015 05:31:29 +0200 - build 4289

1. уточнение 4248: во враппере оставим старое поведение DM_SETTEXT.

zg 05.03.2015 03:31:02 +0200 - build 4288

1. 0002959: FCTL_SETPANELDIRECTORY перерисовывает экран когда не надо.

drkns 04.03.2015 02:57:17 +0200 - build 4287

1. Уточнение 4280.2.

drkns 03.03.2015 22:47:29 +0200 - build 4286

1. 0002957: Undo отменяет добавленную строку, но после сохранения файла она остаётся

2. Раскрываем главное меню в том числе и по стрелке вверх.

drkns 02.03.2015 22:15:32 +0200 - build 4285

1. Уточнение 4280.1.

drkns 01.03.2015 16:17:34 +0200 - build 4284

1. При определённых манипуляциях с QuickView могло происходить странное.

zg 01.03.2015 13:12:22 +0200 - build 4283

1. 0002956: Падение Фара на старте после выхода с панелью быстрого просмотра.

drkns 01.03.2015 02:12:37 +0200 - build 4282

1. Уточнение 4280.2.

drkns 01.03.2015 00:58:19 +0200 - build 4281

1. Уточнение 4280.1.

drkns 28.02.2015 23:56:47 +0200 - build 4280

1. FCTL_SETPANELDIRECTORY теперь возвращает 0 при неудаче и не порождает диалогов в процессе.

2. Рефакторинг. Возможны разнообразные чудеса в редакторе.

w17 27.02.2015 14:35:20 +0300 - build 4279
