@@ -1,4 +1,8 @@
-﻿shmuel 09.03.2015 00:15:32 +0200 - build 4295
+﻿drkns 09.03.2015 16:57:18 +0200 - build 4296
+
+1. Уточнение 4294.
+
+shmuel 09.03.2015 00:15:32 +0200 - build 4295
 
 1. M#2965: При вставке вертикального блока усекаются последние символы в каждой строке.
 
